hphp/test/slow/hack_mode/2214.php.expectf
Fatal error: Type arguments are not allowed in this position in %s on line 15
